[package]
name = "pwdchk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.6.0"
sha1 = "0.10.5"
reqwest = {version = "0.11", features = ["blocking"]}
tokio = {version = "1.22.0", features = ["full"]}
futures = "0.3.25"
ipnet = "2.7.0"
